<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill amount</string>
    <string name="clear">Clear</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="people">People</string>
    <string name="number_of_people">Number of people</string>
    <string name="per_person">Per Person</string>
    <string name="made_with_by_nino">Made with ♥ by NINO</string>
</resources>